objects/ssot__SalesOrder__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivatedByUserId__c</fullName>
        <label>Activated By User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivatedDateTime__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedProductTaxAmount__c</fullName>
        <label>Adjusted Product Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedTotalDeliveryAmount__c</fullName>
        <label>Adjusted Total Delivery Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedTotalProductAmount__c</fullName>
        <label>Adjusted Total Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToAccountId__c</fullName>
        <label>Bill To Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToAddressId__c</fullName>
        <label>Bill To Address</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToContactId__c</fullName>
        <label>Bill To Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingDayOfTheMonth__c</fullName>
        <label>Billing Day of the Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BilltoEmailId__c</fullName>
        <label>Bill to Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BilltoPhoneNumberId__c</fullName>
        <label>Bill to Phone Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessModel__c</fullName>
        <label>Business Model</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanBillNow__c</fullName>
        <label>Can Bill Now</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompanyAuthorizedById__c</fullName>
        <label>CompanyAuthorizedBy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConfirmationDate__c</fullName>
        <label>Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ConfirmationRecipientEmailText__c</fullName>
        <label>Confirmation Recipient Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerAuthorizedById__c</fullName>
        <label>CustomerAuthorizedBy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryDocumentType__c</fullName>
        <label>Delivery Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryNoteText__c</fullName>
        <label>Delivery Note Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceId__c</fullName>
        <label>Device</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FiledDate__c</fullName>
        <label>Filed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GrandTotalAmount__c</fullName>
        <label>Grand Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalBusinessUnitId__c</fullName>
        <label>Internal Business Unit</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceNoteText__c</fullName>
        <label>Invoice Note Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAlerted__c</fullName>
        <label>Is Alerted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAnonymous__c</fullName>
        <label>Is Anonymous</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <label>Is Closed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsContracted__c</fullName>
        <label>Is Contracted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHistoricalOnly__c</fullName>
        <label>Is Historical Only</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSuspended__c</fullName>
        <label>Is Suspended</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTaxExempt__c</fullName>
        <label>Is Tax Exempt</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MobileStoreId__c</fullName>
        <label>Mobile Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MobileStoreSalesStoreId__c</fullName>
        <label>MobileStoreSales Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderEndDate__c</fullName>
        <label>Order End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderStartDate__c</fullName>
        <label>Order Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OrderinsuranceAmountCurrency__c</fullName>
        <label>Order insurance Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalOrderId__c</fullName>
        <label>Original Order</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerUserId__c</fullName>
        <label>Owner User Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PayerAccountId__c</fullName>
        <label>Payer Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentAdjustmentReasonText__c</fullName>
        <label>Payment Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentTermCodeId__c</fullName>
        <label>Payment Term Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedDeliveryDate__c</fullName>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PriceCalculationStatusMessageText__c</fullName>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceDate__c</fullName>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PricebookId__c</fullName>
        <label>Pricebook Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromiseDate__c</fullName>
        <label>Promise Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseOrderDate__c</fullName>
        <label>Purchase Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseOrderNumber__c</fullName>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteId__c</fullName>
        <label>Quote</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RenewalTermId__c</fullName>
        <label>Renewal Term</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RenewalUpliftRate__c</fullName>
        <label>Renewal Uplift Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedStartDate__c</fullName>
        <label>Requested Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RetailStoreId__c</fullName>
        <label>Retail Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetailStoreSalesStoreId__c</fullName>
        <label>RetailStoreSales Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesChannelId__c</fullName>
        <label>Sales Channel</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderChangeLogs__c</fullName>
        <label>SalesOrderChangeLogs relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderConfirmationStatusId__c</fullName>
        <label>Sales Order Confirmation Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderConfirmationStatus__c</fullName>
        <label>[DoNotUse]Sales Order ConfirmationStatus</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderDeliveryGroups__c</fullName>
        <label>SalesOrderDeliveryGroups relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderPaymentSummaries__c</fullName>
        <label>SalesOrderPaymentSummaries relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderPriceAdjustments__c</fullName>
        <label>SalesOrderPriceAdjustments relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderStatusId__c</fullName>
        <label>Sales Order Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderStatus__c</fullName>
        <label>[DoNotUse]Sales Order Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderSystemStatusId__c</fullName>
        <label>Sales Order System Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderSystemStatus__c</fullName>
        <label>[DoNotUse]Sales Order System Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderTypeId__c</fullName>
        <label>Sales Order Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderType__c</fullName>
        <label>[DoNotUse]Sales Order Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrder_OwnerUserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrder_OwnerUserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>SalesOrder_OwnerUserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>SalesOrder_OwnerUserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__SalesStoreId__c</fullName>
        <label>Sales Store</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SellerAccountId__c</fullName>
        <label>Seller Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SellerId__c</fullName>
        <label>Seller</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToAccountId__c</fullName>
        <label>Ship To Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToAddressId__c</fullName>
        <label>Ship To Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToContactId__c</fullName>
        <label>Ship To Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToEmailId__c</fullName>
        <label>Ship To Email</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiptoPhoneNumberId__c</fullName>
        <label>Ship to Phone Number</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCartId__c</fullName>
        <label>Shopping Cart Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoldToCustomerId__c</fullName>
        <label>Sold To Customer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonText__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxPolicy__c</fullName>
        <label>Tax Policy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustedDeliveryTaxAmount__c</fullName>
        <label>Total Adjusted Delivery Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
        <label>Total Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmountCurrencyId__c</fullName>
        <label>Total Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBookingAmount__c</fullName>
        <label>Total Booking Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCancelledBillingAmount__c</fullName>
        <label>Total Cancelled Billing Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjDistTaxAmount__c</fullName>
        <label>Total Delivry Adjustment Dist Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjustmentDistAmount__c</fullName>
        <label>Total Delivery Adjustment Dist Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAmount__c</fullName>
        <label>Total Delivery Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryFeeAmount__c</fullName>
        <label>Total Delivery Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryFeeCurrencyId__c</fullName>
        <label>Total Delivery Fee Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryTaxAmount__c</fullName>
        <label>Total Delivery Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliverytAmountCurrencyId__c</fullName>
        <label>Total Delivery Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPendingBillingAmount__c</fullName>
        <label>Total Pending Billing Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAdjDistTaxAmount__c</fullName>
        <label>Total Product Adjustment Dist Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAdjustmentDistAmount__c</fullName>
        <label>Total Product Adjustment Dist Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAmountCurrencyId__c</fullName>
        <label>Total Product Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAmount__c</fullName>
        <label>Total Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmountCurrencyId__c</fullName>
        <label>Total Product Tax Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmount__c</fullName>
        <label>Total Product Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAdjDeliveryAmount__c</fullName>
        <label>Total With Tax Adj Delivery Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAdjProductAmount__c</fullName>
        <label>Total With Tax Adj Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxDeliveryAdjDistAmount__c</fullName>
        <label>Total With Tax Delivery Adj Dist Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxDeliveryAmount__c</fullName>
        <label>Total With Tax Delivery Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxProductAdjDistAmount__c</fullName>
        <label>Total With Tax Product Adj Dist Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxProductAmount__c</fullName>
        <label>Total With Tax Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UserDeviceSessionId__c</fullName>
        <label>User Device Session</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreSalesStoreId__c</fullName>
        <label>WebStoreSales Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WholesalerAccountId__c</fullName>
        <label>Wholesaler Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761150502_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_SalesOrder_Bil_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_SalesOrder_Bil_rel</relationshipLabel>
        <relationshipName>rel_1697761150502_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761150592_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_SalesOrder_Shi_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_SalesOrder_Shi_rel</relationshipLabel>
        <relationshipName>rel_1697761150592_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152393_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_SalesOrder_BillToAcco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_SalesOrder_BillToAcco_rel</relationshipLabel>
        <relationshipName>rel_1697761152393_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>